--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="keywords" content="marine insurance, SD Life Wealth, maritime insurance, vessel coverage, Australia">
     <title>Marine Insurance - SD Life Wealth</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://suzumi-suu.github.io/sd-life-wealth-marine-insurance/">
+    <meta name="google-site-verification" content="GHww9982NYuhU43QhBvgqp2UpY7auLZYyZc6PLVPwO8" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FKWL5S2JT9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FKWL5S2JT9');
+</script>
 </head>
 <body>
 
